syntax = "proto3";

package api;

option go_package = "github.com/aburtasov/books/api";

service Booker {
    rpc GetBooks(Author) returns (Books) {}
    rpc GetAuthor(Book) returns (Author) {}
    rpc addBook(AddBook) returns (ResponceID) {}
    rpc addAuthor(Author) returns (ResponceID) {}
}

message Author {
    string first_name = 1;
    string second_name = 2;
}

message Book {
    string title = 1;
}

message Books {
    repeated string title = 1;
}

message ResponceID {
    string value = 1;
}

message AddBook {
    string title = 1;
    string description = 2;
    int64 author_id = 3;
}
